依存関係の整理とアクセス指針の文書化を更新

--- a/.build/requirements.in
+++ b/.build/requirements.in
@@ -4,16 +4,11 @@
 # アプリケーションの実行に必須のライブラリ
 # pip-compile によって requirements.txt に依存関係も含めて書き出されます
 
-typer[all]              # CLIフレームワーク (引数解析, コマンド定義, ヘルプ表示等)
-githubkit               # GitHub APIクライアント (REST & GraphQL対応)
-langchain               # LangChainコアフレームワーク (LLMアプリケーション構築用)
-langchain-core
-langchain-community
-langchain-openai        # LangChain用 OpenAI (ChatGPT) 連携ライブラリ
-langchain-google-genai  # LangChain用 Google Generative AI (Gemini) 連携ライブラリ
-pydantic-settings       # Pydanticを利用した設定管理 (環境変数/.env読み込み, 型検証)
-python-dotenv           # .env ファイルから環境変数を読み込む (pydantic-settingsが内部で利用)
-
+requests
+pandas
+beautifulsoup4
+lxml
+tqdm
 
 # --- Development Dependencies ---
 # 開発時にのみ使用するツール (テスト, Lint, Format, 依存関係管理等)
