--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -269,10 +269,13 @@
 制約条件_前提条件:
   技術的制約:
     - "開発言語はPython (バージョン3.8以上を推奨)。"
-    - "実行環境はDockerコンテナ。Dockerfileを提供し、必要なライブラリ（pandas, requests, beautifulsoup4等を想定）は`pip`でインストールする。"
-    - "HTML解析ライブラリの選定は、安定性・確実性を重視しつつ、迅速かつ簡単な実装を優先する。"
+    - "実行環境はDockerコンテナ。Dockerfileを提供し、必要なライブラリは`pip`でインストールする。"
+    - "HTML解析ライブラリの選定は、安定性・確実性を重視しつつ、迅速かつ簡単な実装を優先する。(pandas, beautifulsoup4, lxmlを候補とする)"
     - "コマンドライン引数解析には `argparse` モジュール等の標準的なライブラリを使用する。"
     - "**設定ファイルの利用はしない。** URLテンプレートやHTML要素セレクタ等の変更はコード修正で対応する。"
+    - "(新規追加) 依存関係の管理には `pip-tools` を使用し、`requirements.in` から `requirements.txt` を生成する。"
+    - "(新規追加) コードの静的解析とフォーマットには `ruff` を、型チェックには `mypy` を使用し、コード品質を維持する。"
+    - "(新規追加) 進捗表示機能の実装には `tqdm` ライブラリの利用を推奨する。"
     - "(追記) TASK-ACCESS-POLICY-01で策定されるアクセス指針（User-Agent、ドメイン別最小アクセス間隔など）を強制するためのロジックをadapter-webレイヤーに実装すること。"
   運用上の制約:
     - "システム利用者は、コマンドラインの基本的な操作に習熟していること。"
