--- a/docs/issues.yml
+++ b/docs/issues.yml
@@ -498,7 +498,7 @@ github_issues_list:
         - "`docker build` コマンドでイメージが正常にビルドできること。"
         - "ビルドされたイメージからコンテナを起動し、サンプルスクリプト（または本システムの一部）が実行できること。"
       related_requirement: "TASK-003 (参照元: 技術的制約, NFR-016)"
-      dependencies: null # (ただし、依存モジュールがある程度固まってからが効率的)
+      dependencies: null # (初期段階から着手し、継続的に改善)
       milestone: "M5" # (初期段階から着手し、継続的に改善)
       labels:
         - "type:technical-task"
@@ -674,22 +674,151 @@ github_issues_list:
         - "TDD"
       notes: "[分割必須] このIssueはテスト全体の計画と管理。具体的なテスト実装は、例えば TASK-009-Unit-Domain, TASK-009-Integration-Pipeline のように個別のIssueを作成する。"
 
+    - id: "DISC-001_Issue"
+      title: "[Discussion] CSV空欄表現の具体化"
+      description: |
+        「補足_確認_検討事項」のNo.1より。
+        エラーでスキップされた日のデータ項目をCSVファイル上で「空欄」と表現する際の具体的な方法を決定する。
+      implementation_tasks:
+        - "[ ] `,,` のように値がない状態とするか、`\"\"` のように空文字列を明示的に入れるか、`NaN` や `-1` (既存の欠損値と同じ) を使うかなどを検討。"
+        - "[ ] Pandas等、使用するCSV書き出しライブラリのデフォルト挙動を確認。"
+        - "[ ] データ利用者が最も扱いやすい形式を選択する。"
+      acceptance_criteria:
+        - "CSVの空欄表現の仕様が明確に定義されること。"
+        - "US-010_Issue (CSV出力) の実装に反映されること。"
+      related_requirement: "補足1"
+      dependencies: null
+      milestone: "M3"
+      labels:
+        - "type:discussion"
+        - "epic:EPIC-04"
+        - "feature:csv-output"
+        - "needs-discussion"
+        - "priority:medium"
+      notes: null
+
+    - id: "DISC-002_Issue"
+      title: "[Discussion] CSV別名保存の命名規則決定"
+      description: |
+        「補足_確認_検討事項」のNo.2より。
+        同名のCSVファイルが既に存在する場合の「別名で保存」の具体的な命名規則を決定する。
+      implementation_tasks:
+        - "[ ] `filename(1).csv`, `filename(2).csv` のような連番方式で良いか検討。"
+        - "[ ] タイムスタンプを付与する方式（例: `filename_YYYYMMDDHHMMSS.csv`）も比較検討。"
+        - "[ ] 実装の容易性とユーザーの分かりやすさを考慮して決定する。"
+      acceptance_criteria:
+        - "別名保存時の命名規則が明確に定義されること。"
+        - "US-010_Issue (CSV出力) の実装に反映されること。"
+      related_requirement: "補足2"
+      dependencies: null
+      milestone: "M3"
+      labels:
+        - "type:discussion"
+        - "epic:EPIC-04"
+        - "feature:csv-output"
+        - "needs-discussion"
+        - "priority:medium"
+      notes: null
+
+    - id: "DISC-003_Issue"
+      title: "[Discussion] 1日分処理のスタック時タイムアウト値検討"
+      description: |
+        「補足_確認_検討事項」のNo.3より。
+        非機能要件NFR-001における「スタックしたと判断される場合（例: タイムアウト設定）」の具体的なタイムアウト値を検討する。
+      implementation_tasks:
+        - "[ ] 1日分のHTML取得と解析にかかる通常の時間を概算。"
+        - "[ ] ネットワーク遅延なども考慮し、現実的なタイムアウト値を設定（例: 5分、10分など）。"
+        - "[ ] タイムアウト発生時のログ内容、ユーザーへの通知方法も併せて検討。"
+      acceptance_criteria:
+        - "1日分の処理に対するタイムアウト値の目安が設定されること。"
+        - "NFR-001 (性能) の実装・検証に反映されること。"
+      related_requirement: "補足3"
+      dependencies: null
+      milestone: "M5"
+      labels:
+        - "type:discussion"
+        - "epic:EPIC-06"
+        - "feature:error-handling"
+        - "needs-discussion"
+        - "priority:medium"
+      notes: null
+
+    - id: "DISC-004_Issue"
+      title: "[Discussion] ログレベル設定方法の具体化"
+      description: |
+        「補足_確認_検討事項」のNo.4より。
+        機能要件FR-008-02「ログレベル設定可能」の具体的な設定方法を決定する。
+      implementation_tasks:
+        - "[ ] コマンドラインオプション（例: `--loglevel DEBUG`）で指定する方式で良いか確認。"
+        - "[ ] 対応するログレベルの名称（DEBUG, INFO, WARNING, ERRORなど）を定義。"
+      acceptance_criteria:
+        - "ログレベルの設定方法が明確に定義されること。"
+        - "TASK-004_Issue (ロギング基盤実装) に反映されること。"
+      related_requirement: "補足4"
+      dependencies: null
+      milestone: "M4"
+      labels:
+        - "type:discussion"
+        - "epic:EPIC-05"
+        - "feature:logging"
+        - "needs-discussion"
+        - "priority:low"
+      notes: null
+
+    - id: "DISC-005_Issue"
+      title: "[Discussion] HTML構造変更時のエラーメッセージ具体化"
+      description: |
+        「補足_確認_検討事項」のNo.5より。
+        HTML構造変更でデータ抽出に失敗した場合にユーザーに表示するCUIおよびログのメッセージ内容を具体的にする。
+      implementation_tasks:
+        - "[ ] ユーザーが原因を推測しやすく、かつ開発者がデバッグしやすい情報を含むメッセージ案を作成。"
+        - "  (例: `エラー: [YYYY-MM-DD]のデータ抽出に失敗しました。気象庁サイトのページ構成が変更された可能性があります。詳細はログファイル [ログファイルパス] をご確認ください。`)"
+        - "[ ] ログには、どの要素が見つからなかったかなど、より技術的な詳細を含めることを検討。"
+      acceptance_criteria:
+        - "HTML構造変更に起因するデータ抽出失敗時のエラーメッセージ（CUI/ログ）のテンプレートが定義されること。"
+        - "US-006_Issue (HTML抽出)、US-012_Issue (エラー通知) の実装に反映されること。"
+      related_requirement: "補足5"
+      dependencies: null
+      milestone: "M4"
+      labels:
+        - "type:discussion"
+        - "epic:EPIC-02"
+        - "epic:EPIC-05"
+        - "feature:error-handling"
+        - "needs-discussion"
+        - "priority:medium"
+      notes: null
+
     - id: "TASK-ATTRIBUTION-DOC-01_Issue"
       title: "[TechnicalTask][Documentation] データ利用時の推奨出典表記をREADME等に記載 (TASK-ATTRIBUTION-DOC-01)"
       description: |
-        `TASK-008`調査報告書に基づき、本システムが生成したCSVファイルを利用する際の、気象庁への適切な出典表記方法をユーザー向けドキュメントに明記する。
+        気象庁データの利用規約に基づき、適切な出典表記方法をユーザー向けドキュメントに記載する。
       implementation_tasks:
-        - "[ ] `README.md` または別途用意する `USAGE.md` に「データの利用と出典について」といったセクションを設ける。"
-        - "[ ] 推奨される出典表記の具体例を記載する（例: 「出典：気象庁ホームページ （当該ページのURL）に基づき風況データ収集・統合システムが作成」）。"
-        - "[ ] データを加工して利用する場合の注意点も併記する。"
+        - "[ ] `README.md`または`USAGE.md`に出典表記例を記載する。"
       acceptance_criteria:
-        - "ユーザー向けドキュメントに、出典表記に関する明確なガイドラインが追加されていること。"
+        - "README等に出典表記が明記されている。"
       related_requirement: "TASK-008, US-010"
       dependencies: []
       milestone: "M3"
       labels:
         - "type:documentation"
         - "epic:EPIC-04"
+        - "priority:medium"
+
+    - id: "TASK-JMA-LAW-DOC-01_Issue"
+      title: "[TechnicalTask][Documentation] システムの制約事項として気象業務法に関する注意点を開発者ドキュメントに記載 (TASK-JMA-LAW-DOC-01)"
+      description: |
+        将来的な機能拡張に備え、気象業務法に関する留意点を開発者向けドキュメントに記載する。
+      implementation_tasks:
+        - "[ ] `COMPLIANCE.md`等に気象業務法の注意点を記載する。"
+      acceptance_criteria:
+        - "開発者ドキュメントに注意点が明記されている。"
+      related_requirement: "TASK-008"
+      dependencies: []
+      milestone: "M3"
+      labels:
+        - "type:documentation"
+        - "epic:EPIC-06"
         - "priority:medium"
 
     - id: "TASK-THROTTLE-01-FINAL_Issue"
@@ -742,27 +871,14 @@ github_issues_list:
         `TASK-008`の調査報告書、および`robots.txt`が存在しないという確定情報に基づき、本システムが気象庁ウェブサイトへアクセスする際の明確な技術的・倫理的指針を策定し、開発ドキュメントとして恒久的に記録する。
         この指針は、`adapter-web`レイヤーの実装における全ての前提条件となる。
       implementation_tasks:
-        - "[ ] チームミーティング（または非同期議論）を設定し、以下の項目について合意形成を行う。"
-        - "    - 1. **User-Agent文字列の最終決定** (例: `WindDataCollector/1.0 (+http://yourproject.example.com/bot.html)`)
-    - 2. **アクセス間隔のシステム内部最小値の正式決定**
-        - `data.jma.go.jp`ドメインに対する最小値 (警告文を最重視し、5秒〜10秒の範囲で決定)
-        - `www.jma.go.jp`ドメインに対する最小値 (例: 3秒)
-    - 3. **エラーハンドリング方針** (例: HTTP 503エラー受信時は、アクセス間隔を一時的に延長する)"
-        - "[ ] 決定したアクセス指針を開発ドキュメント（例: `docs/COMPLIANCE.md`）に明記する。"
-        - "[ ] 開発チーム全員がこの指針をレビューし、承認したことを確認する。"
+        - "[x] チームミーティング（または非同期議論）を設定し、User-Agent・最小アクセス間隔・エラーハンドリング・アクセス対象パス原則を正式決定"
+        - "[x] 決定したアクセス指針を開発ドキュメント（例: docs/COMPLIANCE.md）に明記"
+        - "[x] 開発チーム全員でレビュー・承認"
+        - "[x] 関連GitHub Issues・要件定義書へ反映（US-002, US-005, FR-002, NFR-002, NFR-017, スコープ・制約等）"
+        - "[x] 実装用の新規技術タスク（TASK-UA-01, TASK-THROTTLE-01-FINAL等）を起票"
       acceptance_criteria:
-        - "User-Agentの具体的な文字列が決定され、文書化されていること。"
-        - "各関連ドメインに対するシステム内部の最小アクセス間隔が明確に定義され、文書化されていること。"
-        - "上記指針が開発チームに周知徹底され、開発ドキュメントとしてマージされていること。"
-      related_requirement: "TASK-008, US-005"
-      dependencies: []
-      milestone: "M2"
-      labels:
-        - "type:technical-task"
-        - "type:chore"
-        - "type:documentation"
-        - "epic:EPIC-02"
-        - "epic:EPIC-06"
-        - "layer:adapter-web"
-        - "policy"
-        - "priority:high"
+        - "[x] User-Agentの具体的な文字列が決定され、文書化されている"
+        - "[x] 各関連ドメインに対するシステム内部の最小アクセス間隔が明確に定義され、文書化されている"
+        - "[x] 上記指針が開発チームに周知徹底され、開発ドキュメントとしてマージされている"
+      notes: |
+        JMAアクセス指針（User-Agent: WindResearcher/1.0, data.jma.go.jp:8秒, www.jma.go.jp:3秒, エラー時は全体停止）を策定・文書化し、関連成果物へ反映済み。チームレビュー・承認も完了。本Issueはクローズ。
