ロギング機能を実装し、設定関数を追加。ログファイル名を `wind-research.log` に設定し、コマンドライン引数でログレベルを指定可能に。テストケースを追加し、ログ出力の確認を行う。

--- a/.build/context/docker-compose.yml
+++ b/.build/context/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  github-auto-setup:
+  wind-research:
     build:
       context: ./${PROJECT_NAME}/.build
       dockerfile: Dockerfile
