--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -183,9 +183,11 @@
     - "FR-007-03: 処理完了メッセージを表示すること。"
     - "FR-007-04: エラー発生時は、CUIへの通常のエラーメッセージに加え、処理完了後にログファイルの確認を促すメッセージを表示すること（エラーがなければ後者は不要）。"
   FR_008_ログ出力機能:
-    - "FR-008-01: 実行状況、エラー、警告をログファイル（実行ファイルやCSVファイルと同じ場所、命名規則は任意）に出力すること。"
-    - "FR-008-02: ログレベル設定可能（デフォルトINFO）。"
-    - "FR-008-03: (検討) ログローテーション。"
+    - "FR-008-01: 実行状況、エラー、警告を、実行時のカレントディレクトリに `wind-research.log` という名前で出力すること。"
+    - "FR-008-02: コマンドラインオプション `--loglevel` でログレベル（DEBUG, INFO, WARNING, ERROR, CRITICAL）を設定可能とすること。デフォルトは `INFO` とする。"
+    - "FR-008-03: (検討) ログローテーション。（変更なし）"
+    - "FR-008-04: (新規) ログはコンソール（標準出力）にも同時に出力されること。"
+    - "FR-008-05: (新規) `logging.error` が `exc_info=True` 付きで呼び出された場合、例外のスタックトレースがログに記録されること。"
   備考: "(TDD観点：各機能要件は、対応するユニットテスト、結合テスト、受け入れテストの対象となる。入力、期待される処理、期待される出力が明確であるため、テストケースを設計しやすい)\n(Clean Architecture観点：機能要件はアプリケーション層のユースケースとして実装される。ドメイン層のエンティティやサービスを利用し、インターフェースアダプター層を通じて外部（CUI、ファイルシステム、外部API）とやり取りする)"
 
 非機能要件:
@@ -210,7 +212,7 @@
   UI_UX_CUI:
     - "NFR-013: コマンドラインのパラメータ指定方法が直感的で分かりやすいこと。ヘルプメッセージが提供されること。"
     - "NFR-014: 進捗表示（処理中日付、残り日数）が明確で、ユーザーが処理状況を容易に把握できること。"
-    - "NFR-015: エラーメッセージや警告メッセージが具体的で、ユーザーが問題の原因を理解し対処するのに役立つこと。ログファイルの確認を促すメッセージは適切に表示すること。"
+    - "NFR-015: エラーメッセージや警告メッセージが具体的で、ユーザーが問題の原因を理解し対処するのに役立つこと。ログファイル(`wind-research.log`)の確認を促すメッセージは適切に表示すること。"
   実行環境:
     - "NFR-016: 提供されるDockerfileを用いて、依存関係が解決された実行環境を容易に構築できること。"
   備考: "(Clean Architecture観点：非機能要件、特に保守性・拡張性・テスト容易性はアーキテクチャ設計の重要なドライバーとなる)"
