--- a/.build/context/docker-compose.yml
+++ b/.build/context/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  github-auto-setup:
+  wind-research:
     build:
       context: ./${PROJECT_NAME}/.build
       dockerfile: Dockerfile
@@ -9,6 +9,8 @@ services:
     working_dir: ${CONTAINER_VOLUME:-/app}
     environment:
       - PROJECT_NAME=${PROJECT_NAME}
+    ports:
+      - ${HOST_PORT:-8000}:${CONTAINER_PORT:-8000}
     # command: ["bash", "run.sh"]
     stdin_open: true
     tty: true
