コマンドライン引数の必須パラメータを明示的に定義し、エラーメッセージの表示方法を改善

--- a/docs/issues.yml
+++ b/docs/issues.yml
@@ -79,12 +79,11 @@ github_issues_list:
         ユーザーストーリー US-001 を実装する。
         > データ利用者として、コマンドラインから必須パラメータ（観測地点、期間）を指定して風況データ収集処理を開始したい。それは、特定の条件のデータを手軽に取得するためだ。
       implementation_tasks:
-        - "[ ] `(Adapter-CUI)` コマンドライン引数パーサー（`argparse`）の基本的なセットアップを行う (TASK-001 と連携)"
-        - "[ ] `(Adapter-CUI)` 必須パラメータ（都道府県番号, 地点番号, 開始年月日, 取得期間）の引数定義を行う"
-        - "[ ] `(Adapter-CUI/UseCase)` 必須パラメータのバリデーションロジック（存在チェック、基本的な型チェック、日付フォーマット等）を実装する"
-        - "[ ] `(UseCase)` バリデーション済みパラメータを受け取り、後続の処理（現時点ではスタブでOK）を呼び出すエントリーポイントを作成する"
-        - "[ ] `(Adapter-CUI)` 必須パラメータに関するバリデーションエラー発生時、適切なエラーメッセージをCUIに表示し終了する処理を実装する"
-        - "[ ] `(Test)` 上記各機能に対するユニットテストを作成する (TDD)"
+        - "[x] `(Adapter-CUI)` `main.py` に `argparse` を用いてコマンドライン引数（--prefecture_no, --block_no, --start_date, --days）を定義"
+        - "[x] `(Domain)` 日付文字列のバリデーションを行う値オブジェクト `DateValue` を実装"
+        - "[x] `(UseCase)` 入力DTO `CollectWindDataInput` および、バリデーションと後続処理の呼び出しを行う `CollectWindDataUsecase` を実装"
+        - "[x] `(Adapter-CUI)` ユースケースから送出された `ValueError` を捕捉し、標準エラー出力にメッセージを表示後、`sys.exit(1)` で終了する処理を実装"
+        - "[x] `(Test)` `domain`, `usecase` 層の単体テスト、および `adapter-cui` 層のE2Eテストを実装"
       acceptance_criteria:
         - "AC-001-01: コマンドラインで都道府県番号、地点番号、開始年月日、取得期間（日数または終了年月日）を指定してスクリプトを実行できる。"
         - "AC-001-02: 指定された必須パラメータが正しく解釈され、データ取得処理が開始される（または後続処理のスタブが呼ばれる）。"
