--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -153,10 +153,10 @@
 
 機能要件:
   FR_001_CUI:
-    - "FR-001-01: 必須パラメータ（都道府県番号、地点番号、開始年月日、期間）を受け付けること。"
-    - "FR-001-02: オプションパラメータ（データ取得間隔、出力CSVファイルパス）を受け付けること。"
-    - "FR-001-03: 不正なパラメータ指定時、エラーメッセージを表示し終了すること。"
-    - "FR-001-04: ヘルプメッセージ表示オプションを提供すること。"
+    - "FR-001-01: 以下の必須パラメータをコマンドライン引数として受け付けること: `--prefecture_no`, `--block_no`, `--start_date`, `--days`"
+    - "FR-001-02: オプションパラメータ（データ取得間隔、出力CSVファイルパス）を受け付けること。（変更なし）"
+    - "FR-001-03: 必須パラメータ不足時は `argparse` のエラーメッセージを表示し終了すること。パラメータのフォーマットや値が不正な場合は、カスタムエラーメッセージを標準エラー出力に表示し、ゼロ以外のステータスコードで終了すること。"
+    - "FR-001-04: ヘルプメッセージ表示オプションを提供すること。（変更なし）"
   FR_002_データ取得処理:
     - "FR-002-01: 指定期間の各日付に対応するURLを正しく生成すること。"
     - "FR-002-02: URLからHTMLコンテンツを取得すること。"
