実装タスクと受け入れ基準を更新し、データ取得間隔のバリデーションロジックを明確化。アクセス間隔の適用ルールを詳細に記述。

--- a/docs/issues.yml
+++ b/docs/issues.yml
@@ -109,14 +109,14 @@ github_issues_list:
         ユーザーストーリー US-002 を実装する。
         > データ利用者として、コマンドラインからオプションパラメータ（データ取得間隔、出力ファイルパス）を指定したい。それは、取得プロセスをカスタマイズし、出力結果を管理しやすくするためだ。
       implementation_tasks:
-        - "[ ] `(Adapter-CUI)` オプションパラメータ（データ取得間隔、出力ファイルパス）の引数定義を追加する (US-001のパーサーを拡張)"
-        - "[ ] `(Adapter-CUI/UseCase)` データ取得間隔のバリデーション（数値、下限3秒）を実装する。デフォルト値（5秒）を設定する。"
-        - "[ ] `(Adapter-CUI/UseCase)` 出力ファイルパスのバリデーション（文字列として妥当か）を実装する。デフォルト値の命名規則とパスを設定する。"
-        - "[ ] `(UseCase)` これらのオプション値を後続処理で利用できるようにする。"
-        - "[ ] `(Test)` オプションパラメータの解釈、バリデーション、デフォルト値設定に関するユニットテストを作成する (TDD)"
+        - "[ ] (Adapter-CUI) オプションパラメータ（データ取得間隔、出力ファイルパス）の引数定義を追加する (US-001のパーサーを拡張)"
+        - "[ ] (Adapter-CUI/UseCase) データ取得間隔のバリデーションロジック（数値、下限3秒）を実装する。デフォルト値（5秒）を設定する。"
+        - "[ ] (Adapter-CUI/UseCase) 出力ファイルパスのバリデーション（文字列として妥当か）を実装する。デフォルト値の命名規則とパスを設定する。"
+        - "[ ] (UseCase) これらのオプション値を後続処理で利用できるようにする。"
+        - "[ ] (Test) オプションパラメータの解釈、バリデーション、デフォルト値設定に関するユニットテストを作成する (TDD)"
       acceptance_criteria:
         - "AC-002-01: データ取得間隔（秒数）をオプションで指定できる。指定がない場合はデフォルト5秒で動作する。"
-        - "AC-002-02: ユーザーが指定したデータ取得間隔が、TASK-ACCESS-POLICY-01で定義されたシステム内部の最小アクセス間隔を下回る場合、警告メッセージを表示しつつ、システムの最小間隔が強制的に適用される。"
+        - "AC-002-02: 実際に適用されるリクエスト間隔は、TASK-ACCESS-POLICY-01で定義されたシステム内部のドメイン別最小アクセス間隔と、ユーザーが指定した間隔のうち、より長い方の値となる。例えば、システム最小値が8秒のドメインに対しユーザーが3秒を指定した場合は8秒間隔となり、ユーザーが10秒を指定した場合は10秒間隔となる。"
         - "AC-002-03: 出力CSVファイルパスをオプションで指定でき、処理結果がそのパスに保存される。指定がない場合はデフォルトの命名規則とパスで保存される。"
       related_requirement: "US-002 (参照元: FR-001-02, FR-002-03)"
       dependencies:
@@ -828,10 +828,10 @@ github_issues_list:
       description: |
         `adapter-web`レイヤーに、気象庁の警告文と一般的なエチケットを遵守するためのリクエストスロットリング（アクセス間隔制御）機構を実装する。
       implementation_tasks:
-        - "[ ] `TASK-ACCESS-POLICY-01`で決定されたドメインごとの最小アクセス間隔を強制する機能を実装する。"
-        - "[ ] ユーザーが指定したアクセス間隔が、システムで定義された最小値を下回る場合は、システム最小値を優先して適用するロジックを組み込む。"
-        - "[ ] 同一ドメインへのリクエストが並列実行されないようにする（逐次処理を保証する）。"
-        - "[ ] (TDD) 指定された間隔が守られることを検証するユニットテストを作成する（時間を扱うテストには注意を払う）。"
+        - "[x] `TASK-ACCESS-POLICY-01`で決定されたドメインごとの最小アクセス間隔を強制する機能を実装する。"
+        - "[x] ユーザーが指定したアクセス間隔が、システムで定義された最小値を下回る場合は、システム最小値を優先して適用するロジックを組み込む。"
+        - "[x] 同一ドメインへのリクエストが並列実行されないようにする（逐次処理を保証する）。"
+        - "[x] (TDD) 指定された間隔が守られることを検証するユニットテストを作成する（時間を扱うテストには注意を払う）。"
       acceptance_criteria:
         - "`data.jma.go.jp`へのリクエストは、`TASK-ACCESS-POLICY-01`で定義された最小間隔（例: 8秒）以上を空けて実行されること。"
         - "ユーザーが最小値より短い間隔（例: 3秒）を指定しても、システムの最小値が強制されること。"
@@ -851,9 +851,9 @@ github_issues_list:
       description: |
         `TASK-ACCESS-POLICY-01`で決定されたUser-Agent文字列を、気象庁ドメインへのすべてのHTTPリクエストに適用する。これにより、我々のシステムのアクセスであることを気象庁側が識別できるようになる。
       implementation_tasks:
-        - "[ ] `adapter-web`レイヤーで使用するHTTPクライアント（例: `requests`）のデフォルトヘッダーに、指定されたUser-Agentを設定する。"
-        - "[ ] 設定が全ての気象庁ドメインへのリクエストに適用されることを確認する。"
-        - "[ ] (TDD) User-Agentが正しくリクエストヘッダーに含まれることを検証するユニットテストを作成する。"
+        - "[x] `(Infrastructure)` `config.py` に `USER_AGENT` 定数を定義"
+        - "[x] `(Adapter-Web)` `requests.Session` を用いてカスタムUser-Agentを設定する `JmaHttpClient` クラスを実装"
+        - "[x] `(Test)` `requests-mock` を利用し、リクエストヘッダーに正しいUser-Agentが含まれることを検証する単体テストを実装"
       acceptance_criteria:
         - "気象庁サイトへのHTTPリクエストのヘッダーに、`TASK-ACCESS-POLICY-01`で定義されたUser-Agentが正確に含まれていること。"
         - "関連するユニットテストがすべて成功すること。"
