--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -160,7 +160,7 @@
   FR_002_データ取得処理:
     - "FR-002-01: 指定期間の各日付に対応するURLを正しく生成すること。"
     - "FR-002-02: URLからHTMLコンテンツを取得すること。"
-    - "FR-002-03: TASK-ACCESS-POLICY-01で策定されたアクセス指針に基づき、定義されたドメイン別の最小アクセス間隔を遵守すること。ユーザーがコマンドラインで指定した間隔がこの最小値を下回る場合は、システムの最小間隔が優先されること。"
+    - "FR-002-03: TASK-ACCESS-POLICY-01で策定されたアクセス指針に基づき、定義されたドメイン別の最小アクセス間隔を遵守すること。実際に適用される待機時間は、**システムのドメイン別最小間隔とユーザーが指定した間隔のうち、より長い方**となる。"
     - "FR-002-04: HTML取得エラー発生時（ネットワークエラー、HTTPエラー、またはTASK-ACCESS-POLICY-01で定義されたタイムアウトなど、サーバー負荷をかけ続けないためのエラーを含む）、エラーをログに記録し、該当日の処理をスキップすること（リトライは行わない）。"
   FR_003_データ抽出処理:
     - "FR-003-01: HTMLから10分毎の風況関連データ（時刻、風向文字列、風速文字列等）を抽出すること。"
@@ -193,7 +193,7 @@
 非機能要件:
   性能:
     - "NFR-001: 1年分のデータ取得・処理が、進捗表示を確認しつつユーザーが過度なストレスを感じない時間内に完了すること。特定の1日分の処理でスタック（無限ループ等）しないこと。スタックしたと判断される場合（例: タイムアウト設定）、エラーとして扱いスキップ処理を行うこと。"
-    - "NFR-002: データ取得リクエスト間隔は、TASK-ACCESS-POLICY-01で策定されたアクセス指針に基づき、定義されたドメイン別の最小アクセス間隔を遵守すること。ユーザーがコマンドラインで指定した間隔がこの最小値を下回る場合は、システムの最小間隔が優先される。"
+    - "NFR-002: データ取得リクエスト間隔は、TASK-ACCESS-POLICY-01で策定されたアクセス指針に基づき、定義されたドメイン別の最小アクセス間隔を遵守すること。実際に適用される待機時間は、**システムのドメイン別最小間隔とユーザーが指定した間隔のうち、より長い方**となる。"
   可用性:
     - "NFR-003: 気象庁ウェブサイトが利用可能である限り、システムは動作可能であること。"
     - "NFR-004: HTML取得/解析エラー発生時は、該当日の処理をスキップし、可能な限り処理を継続すること。"
@@ -204,7 +204,7 @@
     - "NFR-007: ドメインロジックの変更が、他のレイヤーへの影響を最小限に抑えるように設計されていること (DDD)。"
     - "NFR-008: 新たなデータソースへの対応や出力形式の追加（範囲外だが将来的な拡張として）が比較的容易に行えるようなインターフェース設計を考慮すること。"
     - "NFR-009: Pythonの標準的なコーディング規約（PEP8など）に従い、可読性が高く、変更容易なコードであること（HTML構造変更時はコード修正で対応するため特に重要）。"
-    - "NFR-017 (新規): 気象庁ウェブサイトへのアクセス指針（User-Agent、アクセス間隔等、TASK-ACCESS-POLICY-01で定義）は、明確に文書化され、コード内で設定箇所が特定しやすく、将来的なポリシー変更に対応しやすい構造であること。"
+    - "NFR-017: 気象庁ウェブサイトへのアクセス指針（User-Agent、アクセス間隔等、TASK-ACCESS-POLICY-01で定義）は、明確に文書化され、コード内で設定箇所が特定しやすく、将来的なポリシー変更に対応しやすい構造であること。"
   テスト容易性:
     - "NFR-010: 各機能はユニットテスト可能であること。特にドメインロジック、アプリケーションロジックは外部依存から切り離してテストできること (TDD, Clean Architecture)。"
     - "NFR-011: 外部API（気象庁ウェブサイト）アクセス部分はモック化可能であること。"
