--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -86,7 +86,7 @@
       - "データ利用者は、コマンドラインからシステムを起動し、必須パラメータおよびオプションパラメータを指定する。"
       - "システムは指定されたパラメータを検証する。"
       - "システムはCUIに進捗表示を開始する（例：「処理開始...」）。"
-      - "システムは指定された期間内の各日付について、以下の処理を繰り返す：\n    a.  対象日付の気象庁ウェブサイトURLを生成する。\n    b.  TASK-ACCESS-POLICY-01で策定されたアクセス指針に基づき、定義されたドメイン別の最小アクセス間隔（ユーザー指定値がこれを下回る場合は最小値を優先）を遵守して、対象URLからHTMLコンテンツを取得する。\n    c.  CUIに現在処理中の日付と残り日数を表示する（1日処理ごと更新）。\n    d.  取得したHTMLから10分毎の風況関連データ（時刻、風向文字列、平均風速文字列など）を抽出する。\n    e.  抽出した風向文字列を、定義された数値（北=0, 北北東=22.5, ..., 静穏=-1, ///=-1）に変換する。\n    f.  抽出した風速関連文字列を数値に変換する（数字以外は-1）。\n    g.  処理した日次データを一時的に保持する。"
+      - "システムは指定された期間内の各日付について、以下の処理
       - "システムは全ての日付のデータ処理が完了後、保持している全データを時系列に沿って統合する。"
       - "システムは統合したデータをCSV形式（UTF-8、英語ヘッダー）にフォーマットする。"
       - "システムはCSVデータを指定されたファイルパスに出力・保存する。出力先に同名ファイルが存在する場合、別名（例: `filename(1).csv`）で保存する。"
@@ -103,39 +103,45 @@
 ドメインモデル_初期案:
   エンティティ:
     WindDataRecord:
-      ID: "(複合キー: 観測日時 + 観測地点) または UUID"
+      ID: "UUID" # 実装ではUUIDをデフォルト採用
       属性:
-        observed_at: "観測日時: DateTime"
+        id: "ID: UUID"
+        observed_at: "観測日時: datetime"
         average_wind_direction: "平均風向: WindDirectionValue"
         average_wind_speed: "平均風速: WindSpeedValue"
         max_instantaneous_wind_direction: "最大瞬間風向: WindDirectionValue"
         max_instantaneous_wind_speed: "最大瞬間風速: WindSpeedValue"
-      備考: "(DDD観点：個々の10分間データ。エラー時は空欄を許容するデータ構造)"
+      備考: "個々の10分間データを表すエンティティ。"
     DailyWindReport:
-      ID: "(複合キー: 観測日 + 観測地点) または UUID"
+      ID: "UUID" # 実装ではUUIDをデフォルト採用
       属性:
-        report_date: "報告日: Date"
+        id: "ID: UUID"
+        report_date: "報告日: date"
         observation_point: "観測地点: ObservationPointValue"
-        records: "風況データレコードのリスト: List<WindDataRecord>"
-      振る舞い: "add_record(), mark_as_skipped() (スキップされたことを示すフラグなど)"
+        records: "(内部) 風況データレコードのリスト: List<WindDataRecord>"
+      振る舞い:
+        - "add_record(data): 観測データを内部のレコードリストに追加する。1日の上限(144件)を超えるとエラー。"
+        - "records(): 内部レコードリストの安全なコピーを返す。"
   値オブジェクト:
     ObservationPointValue:
       属性:
-        prefecture_no: "都道府県番号: string"
-        block_no: "地点番号: string"
+        prefecture_no: "都道府県番号: str"
+        block_no: "地点番号: str"
+      備考: "コンストラクタで必須項目チェックを行う。"
     DateTimeRangeValue:
       属性:
-        start_datetime: "開始日時: DateTime"
-        end_datetime: "終了日時: DateTime"
+        start_date: "開始日: date" # datetimeではなくdateを使用
+        end_date: "終了日: date"   # datetimeではなくdateを使用
+      備考: "コンストラクタで `start_date <= end_date` の不変条件を保証。"
     WindDirectionValue:
       属性:
-        degree: "角度: float, 北=0, 北北東=22.5,..., 静穏=-1, 欠損=-1"
-        original_text: "元文字列: string"
-      備考: "ファクトリメソッド（例：from_text(text)）で生成。静穏や「///」は-1に変換。"
+        direction: "方位文字列: str (例: 北東, 静穏, 欠損)"
+        degree: "角度: float (北=0.0, 北北東=22.5, ..., 静穏/欠損=-1.0)"
+      備考: "`from_text(text)` ファクトリメソッドで生成。文字列（方位/静穏////）から対応するインスタンスを生成する。"
     WindSpeedValue:
       属性:
-        value_mps: "メートル毎秒: float, 数字以外は-1"
-      備考: "ファクトリメソッド（例：from_text(text)）で生成。数字以外は-1に変換。"
+        value_mps: "メートル毎秒: float (数字以外や負数は-1.0)"
+      備考: "`from_text(text)` ファクトリメソッドで生成。文字列（数字////など）から対応するインスタンスを生成する。"
   集約:
     - "DailyWindReport を集約ルートとし、WindDataRecord をその内部に含む。"
   ドメインサービス:
@@ -153,10 +159,11 @@
 
 機能要件:
   FR_001_CUI:
-    - "FR-001-01: 以下の必須パラメータをコマンドライン引数として受け付けること: `--prefecture_no`, `--block_no`, `--start_date`, `--days`"
+    - "FR-001-01: 以下の必須パラメータをコマンドライン引数として受け付けること: `--prefecture_no` (文字列), `--block_no` (文字列), `--start_date` (文字列), `--days` (整数)。"
     - "FR-001-02: オプションパラメータ（データ取得間隔、出力CSVファイルパス）を受け付けること。（変更なし）"
-    - "FR-001-03: 必須パラメータ不足時は `argparse` のエラーメッセージを表示し終了すること。パラメータのフォーマットや値が不正な場合は、カスタムエラーメッセージを標準エラー出力に表示し、ゼロ以外のステータスコードで終了すること。"
-    - "FR-001-04: ヘルプメッセージ表示オプションを提供すること。（変更なし）"
+    - "FR-001-03: 必須パラメータ不足時は、`argparse` が生成する標準エラーメッセージを表示し、終了コード `2` でプロセスを終了すること。"
+    - "FR-001-04: ヘルプメッセージ表示オプション (`--help`) を提供すること。（変更なし）"
+    - "(新規) FR-001-05: パラメータの値がドメインルールに違反する場合（例: `start_date` のフォーマットが `YYYY-MM-DD` でない、`days` が1未満など）、アプリケーション固有のエラーメッセージを標準エラー出力に表示し、終了コード `1` でプロセスを終了すること。"
   FR_002_データ取得処理:
     - "FR-002-01: 指定期間の各日付に対応するURLを正しく生成すること。"
     - "FR-002-02: URLからHTMLコンテンツを取得すること。"
@@ -167,8 +174,8 @@
     - "FR-003-02: HTML構造変更等で抽出失敗時、エラーをログに記録し、該当日の処理をスキップすること。抽出データ項目が欠損している場合（「///」等）は欠損として扱う。"
   FR_004_データ変換処理:
     - "FR-004-01: 風向文字列を数値（北=0, 北北東=22.5,..., 静穏=-1, 「///」=-1）に変換すること。"
-    - "FR-004-02: 風速文字列を数値に変換すること。数字以外の文字列（「///」含む）は-1とすること。"
-    - "FR-004-03: 定義外の風向文字列はエラー（または警告）をログに記録し、-1として扱うこと。"
+    - "FR-004-02: 風速文字列を数値（float）に変換すること。数字以外の文字列（例: 「///」、空文字、None）は-1.0として扱うこと。"
+    - "FR-004-03: 定義外の風向文字列や空文字、Noneが入力された場合、-1.0として扱うこと。（ログ記録は必須要件とせず、フォールバック処理を優先）"
   FR_005_データ統合処理:
     - "FR-005-01: 各日付の処理済みデータ（エラーでスキップされた日のデータ項目は空欄）を時系列に統合すること。"
   FR_006_CSV出力処理:
