風況データのURL生成ロジックと風向データ変換処理の実装を更新し、エラーハンドリングの要件を追加

--- a/docs/issues.yml
+++ b/docs/issues.yml
@@ -163,9 +163,10 @@ github_issues_list:
         ユーザーストーリー US-004 を実装する。
         > システムとして、指定された観測地点と日付に基づき、気象庁ウェブサイトの正しいURLを動的に生成したい。それは、該当する風況データページへ確実にアクセスするためだ。
       implementation_tasks:
-        - "[ ] `(UseCase/Domain)` 入力パラメータ（都道府県番号, 地点番号, 年月日）から気象庁の風況データページのURLを生成する関数/メソッドを実装する"
-        - "[ ] `(Domain)` URL生成に必要なパラメータ（ベースURL、クエリパラメータのキー名など）の管理方法を決定する（定数、シンプルな設定クラスなど）"
-        - "[ ] `(Test)` 様々な入力値に対して正しいURLが生成されることを検証するユニットテストを作成する (TDD)"
+        - "[x] (Domain) 気象庁データページのURLテンプレート（ベースURL・クエリパラメータ名）を定数として定義し、パラメータ埋め込みでURLを生成するロジックを実装した"
+        - "[x] (Domain) URL生成用のインターフェース（例: JmaUrlGenerator）を抽象化し、Adapter層で具体実装を提供した"
+        - "[x] (Test) URL生成ロジックのユニットテストを tests/domain/test_jma_url_generator.py で実装し、様々な入力値・ゼロパディング・異常系を網羅した"
+        - "[x] (UseCase) 期間指定時は各日付ごとにURLを生成するロジックを実装し、ユースケース層で利用するようにした"
       acceptance_criteria:
         - "AC-004-01: 入力された都道府県番号、地点番号、年月日を基に、気象庁の風況データページのURLが正しく組み立てられる。"
         - "AC-004-02: 期間指定（例: 2024年1月1日から3日間）の場合、各日付に対応するURLが順次生成されるロジックの基盤となること。"
@@ -254,11 +255,11 @@ github_issues_list:
         ユーザーストーリー US-007 を実装する。
         > システムとして、抽出した文字列形式の風向データを、北を0度とする数値（角度）に変換したい。それは、データを分析しやすい形式にするためだ。
       implementation_tasks:
-        - "[ ] `(Domain)` `WindDirectionValue` 値オブジェクトを実装する (TASK-005_Issue の一部)"
-        - "[ ] `(Domain)` 16方位文字列と角度（北=0, 北北東=22.5...）、および「静穏」「///」と-1.0のマッピングルールを定義する (TASK-006_Issue と連携)"
-        - "[ ] `(Domain/UseCase)` `WindDataConverterService` に風向文字列を `WindDirectionValue` (数値)に変換するロジックを実装する (TASK-006_Issue と連携)"
-        - "[ ] `(UseCase)` 未定義の風向文字列の場合のエラー/警告ログ処理と-1.0へのフォールバックを実装する (TASK-004_Issue 依存)"
-        - "[ ] `(Test)` 様々な風向文字列（正常系、静穏、欠損、未定義）に対する変換ロジックのユニットテストを作成する (TDD)"
+        - "[x] `(Domain)` 不変な値オブジェクト `WindDirectionValue` を実装。変換ロジックを集約するファクトリメソッド `from_text` を持つ"
+        - "[x] `(Domain)` `WindDataConverterService` をリファクタリングし、`WindDirectionValue.from_text` に処理を委譲する形に変更"
+        - "[x] `(UseCase)` `CollectWindDataUsecase` の主処理フローに、データ変換と未定義値の警告ログ出力ロジックを統合"
+        - "[x] `(UseCase)` テスト容易性のため、データ取得部分を `_fetch_and_process_daily_data` メソッドとして分離（スタブ実装）"
+        - "[x] `(Test)` `monkeypatch` を利用してデータ取得部分をモック化し、`execute` メソッドのログ出力動作を検証する単体テストを実装"
       acceptance_criteria:
         - "AC-007-01: 16方位の風向文字列が、それぞれ定義済みの角度（float）に変換される。"
         - "AC-007-02: 風向文字列が「静穏」の場合、数値 `-1.0` に変換される。"
