HTML解析ライブラリの選定基準を更新し、具体的な実装アプローチを明文化

--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -280,7 +280,7 @@
   技術的制約:
     - "開発言語はPython (バージョン3.8以上を推奨)。"
     - "実行環境はDockerコンテナ。Dockerfileを提供し、必要なライブラリは`pip`でインストールする。"
-    - "HTML解析ライブラリの選定は、安定性・確実性を重視しつつ、迅速かつ簡単な実装を優先する。(pandas, beautifulsoup4, lxmlを候補とする)"
+    - "HTML解析には、`BeautifulSoup` で対象テーブル（例: id属性で特定）を抽出し、そのHTML断片を `pandas.read_html` に渡してDataFrameとして解析するアプローチを基本とする。これにより、特定のテーブルを安定して抽出しつつ、データ操作の容易性を確保する。パーサーには `lxml` を使用する。"
     - "コマンドライン引数解析には `argparse` モジュール等の標準的なライブラリを使用する。"
     - "**設定ファイルの利用はしない。** URLテンプレートやHTML要素セレクタ等の変更はコード修正で対応する。"
     - "(新規追加) 依存関係の管理には `pip-tools` を使用し、`requirements.in` から `requirements.txt` を生成する。"
