--- a/docs/issues.yml
+++ b/docs/issues.yml
@@ -465,26 +465,28 @@ github_issues_list:
     - id: "TASK-002_Issue"
       title: "[TechnicalTask] HTML解析ライブラリの選定と導入 (TASK-002)"
       description: |
-        HTML解析に使用するPythonライブラリ（`pandas.read_html`, `Beautiful Soup` + `requests` + `lxml` 等）を調査・選定し、プロジェクトに導入する。
-        選定基準は、安定性・確実性を重視しつつ、迅速かつ簡単な実装が可能であること。
+        技術タスク TASK-002 を実施する。
+        > システムとして、気象庁HTMLデータの解析に最適なライブラリを選定・導入したい。それは、安定したデータ抽出と保守性の高い実装を実現するためだ。
       implementation_tasks:
-        - "[ ] `(Infrastructure/Adapter-Web)` 候補ライブラリの機能比較、サンプルHTMLでのパース精度・容易性の評価 (PoC)"
-        - "[ ] `(Infrastructure/Adapter-Web)` 選定したライブラリをプロジェクトの依存関係に追加"
-        - "[ ] `(Documentation)` 選定理由と基本的な使い方をドキュメント化（開発者向け）"
+        - "[x] `(Infrastructure/Adapter-Web)` 候補ライブラリ(`pandas.read_html`, `Beautiful Soup`)の機能比較、サンプルHTML(`tests/resources/sample_jma.html`)でのPoCを実施"
+        - "[x] `(Infrastructure/Adapter-Web)` PoC結果に基づき、`pandas` と `BeautifulSoup` を併用するアプローチを選定し、依存関係(`requirements.in`)に `pandas`, `lxml`, `beautifulsoup4` を追加"
+        - "[x] `(Documentation)` 選定理由、PoC結果、推奨される基本的な使い方を技術選定報告ドキュメントとして作成"
       acceptance_criteria:
-        - "対象の気象庁HTMLページ構造に対して、最も適切（安定性、メンテ性、実装速度のバランス）と思われるライブラリが選定され、導入されること。"
-        - "簡単なサンプルHTMLからのデータ抽出が選定ライブラリで可能であることが確認できること。"
-      related_requirement: "TASK-002 (参照元: 技術的制約)"
-      dependencies: null
-      milestone: "M2"
+        - "AC-TASK-002-01: HTML解析ライブラリの選定理由が明文化されている。"
+        - "AC-TASK-002-02: 選定したライブラリがプロジェクトに導入されている。"
+        - "AC-TASK-002-03: サンプルHTMLでのデータ抽出PoC結果が記録されている。"
+      related_requirement: "TASK-002 (参照元: FR-003-01, 技術的制約)"
+      dependencies: []
+      milestone: "M1"
       labels:
         - "type:technical-task"
-        - "epic:EPIC-02"
-        - "layer:adapter-web"
+        - "epic:EPIC-01"
+        - "feature:html-parsing"
         - "layer:infrastructure"
+        - "layer:adapter-web"
         - "priority:high"
-        - "needs-discussion"
-      notes: "[分割案あり] PoC (Proof of Concept) を行い、対象HTMLの構造に対して各ライブラリの適合性を評価するタスクを先行させてもよい。"
+        - "TDD"
+      notes: null
 
     - id: "TASK-003_Issue"
       title: "[TechnicalTask] Docker環境構築 (TASK-003)"
