--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -165,10 +165,12 @@
     - "FR-001-04: ヘルプメッセージ表示オプション (`--help`) を提供すること。（変更なし）"
     - "(新規) FR-001-05: パラメータの値がドメインルールに違反する場合（例: `start_date` のフォーマットが `YYYY-MM-DD` でない、`days` が1未満など）、アプリケーション固有のエラーメッセージを標準エラー出力に表示し、終了コード `1` でプロセスを終了すること。"
   FR_002_データ取得処理:
-    - "FR-002-01: 指定期間の各日付に対応する気象庁データページのURLを、以下の仕様で正しく生成すること: (a) パラメータ名は `prefecture_no`, `block_no`, `date`（`YYYY-MM-DD`形式）とし、(b) URLテンプレートは `https://www.data.jma.go.jp/obd/stats/etrn/view/daily_s1.php?prec_no={prefecture_no}&block_no={block_no}&year={yyyy}&month={mm}&day={dd}` を用いること、(c) 年・月・日はゼロパディング2桁（例: 2024-01-03）で埋め込むこと。"
-    - "FR-002-02: URLからHTMLコンテンツを取得すること。"
-    - "FR-002-03: TASK-ACCESS-POLICY-01で策定されたアクセス指針に基づき、定義されたドメイン別の最小アクセス間隔を遵守すること。実際に適用される待機時間は、**システムのドメイン別最小間隔とユーザーが指定した間隔のうち、より長い方**となる。"
-    - "FR-002-04: HTML取得エラー発生時（ネットワークエラー、HTTPエラー、またはTASK-ACCESS-POLICY-01で定義されたタイムアウトなど、サーバー負荷をかけ続けないためのエラーを含む）、エラーをログに記録し、該当日の処理をスキップすること（リトライは行わない）。"
+    - "FR-002-01: (変更なし - US-004の責務)"
+    - "FR-002-02: ユースケース (`CollectWindDataUsecase`) は、`IJmaPageFetcher`ポートを介して、指定されたURLからHTMLコンテンツを取得すること。取得処理は `JmaPageFetcherAdapter` が担当する。"
+    - "FR-002-03: `JmaPageFetcherAdapter` は、`docs/COMPLIANCE.md` および `src/app/adapters/web/config.py` の `ACCESS_POLICIES` で定義されたドメイン別の最小アクセス間隔と、入力DTO (`CollectWindDataInput.interval_sec`、デフォルト5.0秒) で渡されたユーザー指定間隔のうち、より長い方を適用して待機処理を行うこと。この処理は `RequestThrottler` を利用する。"
+    - "FR-002-04: `JmaPageFetcherAdapter` は、HTML取得時のネットワークエラー（例: `requests.exceptions.ConnectionError`）やHTTPエラーステータスコード（4xx, 5xx）を検知した場合、`HtmlFetchingError` を送出すること。送出前にエラー詳細（対象URL、例外情報、スタックトレースを含む）を `ERROR` レベルでログに記録すること。`CollectWindDataUsecase` は、この `HtmlFetchingError` を捕捉し、`WARNING` レベルで該当日の処理をスキップする旨のログを記録し、リトライせずに次の日の処理へ進むこと。"
+    - "(新規) FR-002-05: `JmaPageFetcherAdapter` は、HTTPリクエスト時に `src/infrastructure/config.py` で定義された `USER_AGENT` をリクエストヘッダーに含めること。"
+    - "(新規) FR-002-06: `JmaPageFetcherAdapter` は、HTTP GETリクエスト時に適切なタイムアウト値（例: 30秒）を設定すること。"
   FR_003_データ抽出処理:
     - "FR-003-01: HTMLから10分毎の風況関連データ（時刻、風向文字列、風速文字列等）を抽出すること。"
     - "FR-003-02: HTML構造変更等で抽出失敗時、エラーをログに記録し、該当日の処理をスキップすること。抽出データ項目が欠損している場合（「///」等）は欠損として扱う。"
@@ -201,18 +203,18 @@
 非機能要件:
   性能:
     - "NFR-001: 1年分のデータ取得・処理が、進捗表示を確認しつつユーザーが過度なストレスを感じない時間内に完了すること。特定の1日分の処理でスタック（無限ループ等）しないこと。スタックしたと判断される場合（例: タイムアウト設定）、エラーとして扱いスキップ処理を行うこと。"
-    - "NFR-002: データ取得リクエスト間隔は、TASK-ACCESS-POLICY-01で策定されたアクセス指針に基づき、定義されたドメイン別の最小アクセス間隔を遵守すること。実際に適用される待機時間は、**システムのドメイン別最小間隔とユーザーが指定した間隔のうち、より長い方**となる。"
+    - "NFR-002: データ取得リクエスト間隔は、FR-002-03の仕様に従い、`ACCESS_POLICIES`（`docs/COMPLIANCE.md`および`src/app/adapters/web/config.py`）で定義されたドメイン別の最小アクセス間隔と、ユーザー指定間隔のうち長い方を適用し、`RequestThrottler`で制御する。"
   可用性:
     - "NFR-003: 気象庁ウェブサイトが利用可能である限り、システムは動作可能であること。"
     - "NFR-004: HTML取得/解析エラー発生時は、該当日の処理をスキップし、可能な限り処理を継続すること。"
   セキュリティ:
-    - "NFR-005: 気象庁ウェブサイトの利用規約を遵守し、DoS攻撃とみなされるようなアクセスを行わないこと。"
+    - "NFR-005: 気象庁ウェブサイトの利用規約を遵守し、DoS攻撃とみなされるようなアクセスを行わないこと。HTTPリクエスト時には `src/infrastructure/config.py` で定義された `USER_AGENT` を必ず送信する（FR-002-05参照）。"
   保守性_拡張性:
     - "NFR-006: クリーンアーキテクチャの原則に従い、各コンポーネントが疎結合であること。"
     - "NFR-007: ドメインロジックの変更が、他のレイヤーへの影響を最小限に抑えるように設計されていること (DDD)。"
     - "NFR-008: 新たなデータソースへの対応や出力形式の追加（範囲外だが将来的な拡張として）が比較的容易に行えるようなインターフェース設計を考慮すること。"
     - "NFR-009: Pythonの標準的なコーディング規約（PEP8など）に従い、可読性が高く、変更容易なコードであること（HTML構造変更時はコード修正で対応するため特に重要）。"
-    - "NFR-017: 気象庁ウェブサイトへのアクセス指針（User-Agent、アクセス間隔等、TASK-ACCESS-POLICY-01で定義）は、明確に文書化され、コード内で設定箇所が特定しやすく、将来的なポリシー変更に対応しやすい構造であること。"
+    - "NFR-017: 気象庁ウェブサイトへのアクセス指針（User-Agent、アクセス間隔等、TASK-ACCESS-POLICY-01で定義）は、`docs/COMPLIANCE.md` および `src/app/adapters/web/config.py` で明確に文書化・設定されており、コード内で設定箇所が特定しやすく、将来的なポリシー変更に対応しやすい構造であること。"
   テスト容易性:
     - "NFR-010: 各機能はユニットテスト可能であること。特にドメインロジック、アプリケーションロジックは外部依存から切り離してテストできること (TDD, Clean Architecture)。"
     - "NFR-011: 外部API（気象庁ウェブサイト）アクセス部分はモック化可能であること。"
