風況データ抽出処理の要件を更新し、HTMLからのデータ抽出ロジックとエラーハンドリングを明確化

--- a/docs/requirements.yml
+++ b/docs/requirements.yml
@@ -172,12 +172,17 @@
     - "(新規) FR-002-05: `JmaPageFetcherAdapter` は、HTTPリクエスト時に `src/infrastructure/config.py` で定義された `USER_AGENT` をリクエストヘッダーに含めること。"
     - "(新規) FR-002-06: `JmaPageFetcherAdapter` は、HTTP GETリクエスト時に適切なタイムアウト値（例: 30秒）を設定すること。"
   FR_003_データ抽出処理:
-    - "FR-003-01: HTMLから10分毎の風況関連データ（時刻、風向文字列、風速文字列等）を抽出すること。"
-    - "FR-003-02: HTML構造変更等で抽出失敗時、エラーをログに記録し、該当日の処理をスキップすること。抽出データ項目が欠損している場合（「///」等）は欠損として扱う。"
+    - "FR-003-01: 取得したHTMLコンテンツから、`id='tablefix1'`のテーブル要素を`BeautifulSoup`で特定し、`pandas.read_html` (header=1オプション使用) を用いて10分毎の気象データをDataFrameとして抽出すること。"
+    - "FR-003-02: DataFrameから、観測時刻、平均風向（文字列）、平均風速(m/s文字列)、最大瞬間風速(m/s文字列)、最大瞬間風速の風向（文字列）を抽出し、これらを保持する`RawWindDataDto`オブジェクトのリストに変換すること。"
+    - "FR-003-03: データ抽出時、欠損値（例: `--`, `///`）はNaNに変換せず、元の文字列のまま`RawWindDataDto`に格納すること (`na_values=[], keep_default_na=False` オプションを利用)。"
+    - "FR-003-04: 目的のテーブル(`id='tablefix1'`)が見つからない場合、または定義された必須列（時刻、平均風向、平均風速、最大瞬間風速、最大瞬間風速にリネーム後の列）がDataFrameに存在しない場合、`HtmlParsingError`を送出すること。"
+    - "FR-003-05: ユースケース層(`CollectWindDataUsecase`)は、`HtmlParsingError`を捕捉した場合、エラー情報をログに記録し、該当日のデータ処理をスキップして次の日の処理を継続すること。"
+    - "(新規) FR-003-06: ユースケース層(`CollectWindDataUsecase`)は、`RawWindDataDto`の時刻文字列が不正で`datetime`オブジェクトに変換できない場合、エラー情報をログに記録し、該当レコードの処理をスキップすること。"
   FR_004_データ変換処理:
-    - "FR-004-01: 風向文字列を数値（北=0, 北北東=22.5,..., 静穏=-1, 「///」=-1）に変換すること。"
-    - "FR-004-02: 風速文字列を数値（float）に変換すること。数字以外の文字列（例: 「///」、空文字、None）は-1.0として扱うこと。"
-    - "FR-004-03: (仕様変更) 定義外の風向文字列は-1.0として扱う。関連するログ出力の責務はユースケース層が担う(FR-007-05参照)。"
+    - "FR-004-01: （変更なし）風向文字列を数値（北=0, 北北東=22.5,..., 静穏=-1, 「///」=-1）に変換すること。"
+    - "FR-004-02: （変更なし）風速文字列を数値（float）に変換すること。数字以外の文字列（例: 「///」、空文字、None）は-1.0として扱うこと。"
+    - "FR-004-03: （変更なし）定義外の風向文字列は-1.0として扱う。関連するログ出力の責務はユースケース層が担う(FR-007-05参照)。"
+    - "(新規) FR-004-04: `RawWindDataDto` から抽出された時刻文字列と処理対象日の日付情報を組み合わせ、`datetime`型の観測日時オブジェクトを生成すること。その際、JMAデータの時刻表記「24:00」は、当日の「23:59」として扱うこと。"
   FR_005_データ統合処理:
     - "FR-005-01: 各日付の処理済みデータ（エラーでスキップされた日のデータ項目は空欄）を時系列に統合すること。"
   FR_006_CSV出力処理:
@@ -191,7 +196,7 @@
     - "FR-007-02: 日次データ処理ごとに、現在処理中の日付と残り日数をCUIに表示・更新すること。"
     - "FR-007-03: 処理完了メッセージを表示すること。"
     - "FR-007-04: エラー発生時は、CUIへの通常のエラーメッセージに加え、処理完了後にログファイルの確認を促すメッセージを表示すること（エラーがなければ後者は不要）。"
-    - "FR-007-05: (新規) データ変換処理において、未定義の風向文字列が検出された場合、`WARNING`レベルで「未定義の風向文字列を検出しました: '{text}'。-1.0として処理します。」という形式のログを出力すること。"
+    - "FR-007-05: データ変換処理において、未定義の風向文字列が検出された場合、`WARNING`レベルで「未定義の風向文字列を検出しました: '{text}'。-1.0として処理します。」という形式のログを出力すること。(ログメッセージに処理対象日と時刻を含めることを検討)"
   FR_008_ログ出力機能:
     - "FR-008-01: 実行状況、エラー、警告を、実行時のカレントディレクトリに `wind-research.log` という名前で出力すること。"
     - "FR-008-02: コマンドラインオプション `--loglevel` でログレベル（DEBUG, INFO, WARNING, ERROR, CRITICAL）を設定可能とすること。デフォルトは `INFO` とする。"
